<resources>
    <string name="app_name">GobApp</string>
    <string name="description_left">Born by the Goblet.\nMade men by the Goblet.</string>
    <string name="description_center">Nyahaha! You found me.</string>
    <string name="description_right">Never hire someone from Poland\n(or even Gotland!).</string>
    <string name="comfy_text">What a comfortable starry night!</string>
    <string name="comfy_button">Press here for top comf!</string>
    <string name="left_tab">Alt-Left</string>
    <string name="center_tab">Alt-Center</string>
    <string name="right_tab">Alt-Right</string>
</resources>
