<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.johan.gobapp.MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="38dp"
        android:text="@string/description_left"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="315dp"
        android:layout_marginEnd="121dp"
        android:layout_marginStart="121dp"
        android:layout_marginTop="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/goblet" />

    <android.support.design.widget.TabLayout
        android:id="@+id/tabWidget"
        android:layout_width="368dp"
        android:layout_height="57dp"
        android:layout_marginBottom="5dp"
        app:layout_constraintBottom_toTopOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="8dp">

        <android.support.design.widget.TabItem
            android:id="@+id/left_tab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/left_tab" />

        <android.support.design.widget.TabItem
            android:id="@+id/center_tab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/center_tab" />

        <android.support.design.widget.TabItem
            android:id="@+id/right_tab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/right_tab" />
    </android.support.design.widget.TabLayout>

    <Button
        android:id="@+id/comfy_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:layout_marginEnd="148dp"
        android:layout_marginStart="148dp"
        android:layout_marginTop="156dp"
        android:onClick="showComf"
        android:text="@string/comfy_button"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

</android.support.constraint.ConstraintLayout>
